Thu May 31 14:05:51 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * rpmbuild/ace-tao.spec:
          Added new library

Thu May 31 12:31:38 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/XML_Utils/XMLSchema:
        * ace/XML_Utils/XMLSchema/Traversal.hpp:
        * ace/XML_Utils/XMLSchema/TypeInfo.hpp:
        * ace/XML_Utils/XMLSchema/Types.hpp:
        * ace/XML_Utils/XMLSchema/Writer.hpp:
        * ace/XML_Utils/XMLSchema/id_map.hpp:
        * ace/XML_Utils/XSCRT:
        * ace/XML_Utils/XSCRT/Elements.hpp:
        * ace/XML_Utils/XSCRT/ExtendedTypeInfo.hpp:
        * ace/XML_Utils/XSCRT/Parser.hpp:
        * ace/XML_Utils/XSCRT/Traversal.hpp:
        * ace/XML_Utils/XSCRT/Writer.hpp:
        * ace/XML_Utils/XSCRT/XML.hpp:
        * ace/XML_Utils/XSCRT/XMLSchema.hpp:
          Moved these files from DAnCE to ACE

        * ace/XML_Utils/XSCRT/Elements.ipp:
        * ace/XML_Utils/XSCRT/Parser.ipp:
        * ace/XML_Utils/XSCRT/Traversal.ipp:
        * ace/XML_Utils/XSCRT/Writer.ipp:
        * ace/XML_Utils/XSCRT/XML.ipp:
          Removed these files.

Thu May 31 09:12:07 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/XML_Utils:
        * ace/XML_Utils/XML.mpc:
        * ace/XML_Utils/XML_Error_Handler.h:
        * ace/XML_Utils/XML_Helper.h:
        * ace/XML_Utils/XML_Schema_Resolver.h:
        * bin/MakeProjectCreator/config/ace_xml_utils.mpb:
          New ACE_XML_Utils library. This is coming from DAnCe and had to
          move to ACE because it is now used in more places and soon will
          also be used by OpenDDS

Thu May 31 07:57:59 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/High_Res_Timer.h:
        * ace/Message_Block.h:
          Doxygen improvements

        * ace/High_Res_Timer.inl:
          Use gsf type to prevent overflow

        * docs/bczar/bczar.html:
          Added some more packages

Thu May 24 14:35:04 UTC 2012  Steve Huston  <shuston@riverace.com>
