@@ -19,8 +19,6 @@
 
 #include "ace/Log_Msg.h"
 
-
-
 ACE_BEGIN_VERSIONED_NAMESPACE_DECL
 
 ACE_ALLOC_HOOK_DEFINE(ACE_Condition_Thread_Mutex)
